<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerActivity">

    <TextView
        android:id="@+id/tvNewContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/tvEditContacto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="32dp"
        android:inputType="text"
        android:labelFor="@+id/tvNombre"
        app:layout_constraintStart_toEndOf="@+id/tvNombre"
        app:layout_constraintTop_toBottomOf="@+id/tvNewContacto" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:inputType="textEmailAddress"
        android:labelFor="@+id/tvCorreo"
        app:layout_constraintStart_toEndOf="@+id/tvCorreo"
        app:layout_constraintTop_toBottomOf="@+id/etTelefono" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:inputType="phone"
        android:labelFor="@+id/tvTelefono"
        app:layout_constraintStart_toEndOf="@+id/tvTelefono"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:text="@string/etNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNewContacto" />

    <TextView
        android:id="@+id/tvCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/etCorreo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTelefono" />

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/etTelefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGuardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCorreo"
        app:layout_constraintVertical_bias="0.162" />


    <Button
        android:id="@+id/btnEditar"
        android:layout_width="176dp"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        android:text="Editar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="176dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:text="Eliminar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>